--- a/astrologie.html
+++ b/astrologie.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href='fonts.css' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" href="img/icon.png">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
