--- a/despre.html
+++ b/despre.html
@@ -2,12 +2,12 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
 	<link rel="stylesheet" href="css/animate.css"/>
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript"></script>
-	<script src="http://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"></script>
-	<script src="static/jquery-1.9.1.min.js"></script>      
-	<script src="static/jquery-migrate-1.1.1.min.js"></script>
-	<script src="static/jquery.mobile-1.3.1.min.js"></script>
+	<script src="js/jquery-2.1.1.min.js"></script>
+	<script src="js/jquery.min.js" type="text/javascript"></script>
+	<script src="js/jquery.typetype.min.js" type="text/javascript"></script>
+	<script src="js/1.12.0-jquery.min.js"></script>
+	<script src="js/2.1.3-jquery.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
 	<link rel="shortcut icon" href="img/icon.png">
 	<title>Despre</title>
 	<style>
