--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<link rel="stylesheet" href="css/animate.css"/>
 	<link rel="shortcut icon" href="img/icon.png">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<script src="js/1.12.0-jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<title>InterUnivers</title>
 	<style type="text/css">
 		::-webkit-scrollbar {
