--- a/lectia1.html
+++ b/lectia1.html
@@ -5,12 +5,8 @@
 	<link rel="shortcut icon" href="img/icon.png">
 	<link rel="stylesheet" href="css/meniu.css" type="text/css" charset="utf-8"/>
 	<link rel="stylesheet" href="css/animate.css"/>
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript"></script>
-	<script src="http://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"></script>
-	<script src="static/jquery-1.9.1.min.js"></script>      
-	<script src="static/jquery-migrate-1.1.1.min.js"></script>
-	<script src="static/jquery.mobile-1.3.1.min.js"></script>
+	<script src="js/jquery-2.1.1.min.js"></script>
+	<script src="js/jquery.typetype.min.js" type="text/javascript"></script>
 	<style>
 		body{
 			background-position: center center;
