--- a/multimedia.html
+++ b/multimedia.html
@@ -3,20 +3,14 @@
 <head>
 <title>Multimedia</title>
 <link rel="shortcut icon" href="img/icon.png">
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript"></script>
-<script src="http://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src = "http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript"></script>
-<script src="http://iamdanfox.github.io/typetype/jquery.typetype.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="js/jquery-1.3.2.js"></script>
+<script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/jquery.typetype.min.js" type="text/javascript"></script>
+<script src="js/1.12.0-jquery.min.js"></script>
+<script src="js/2.1.3-jquery.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
 <link rel="stylesheet" href="ism/css/my-slider.css"/>
 <link rel="stylesheet" href="css/animate.css"/>
-<script src="ism/js/ism-2.1.js"></script>
 
 <script type="text/javascript">
 $(function() {
