--- a/multimedia.html
+++ b/multimedia.html
@@ -9,6 +9,8 @@
 <script src="js/1.12.0-jquery.min.js"></script>
 <script src="js/2.1.3-jquery.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
+<script src="ism/js/ism-2.1.js"></script>
+<script src="ism/js/ism-2.1-min.js"></script>
 <link rel="stylesheet" href="ism/css/my-slider.css"/>
 <link rel="stylesheet" href="css/animate.css"/>
 
